--- a/ide/frames/files_options.lfm
+++ b/ide/frames/files_options.lfm
@@ -9,15 +9,15 @@ object FilesOptionsFrame: TFilesOptionsFrame
   ClientWidth = 569
   TabOrder = 0
   Visible = False
-  DesignLeft = 119
-  DesignTop = 158
+  DesignLeft = 441
+  DesignTop = 249
   object MaxRecentOpenFilesLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 2
-    Height = 16
+    Height = 15
     Top = 2
-    Width = 164
+    Width = 145
     Caption = 'MaxRecentOpenFilesLabel'
     ParentColor = False
   end
@@ -25,9 +25,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideLeft.Control = lblCenter
     AnchorSideTop.Control = Owner
     Left = 287
-    Height = 16
+    Height = 15
     Top = 2
-    Width = 174
+    Width = 155
     BorderSpacing.Left = 3
     Caption = 'MaxRecentProjectFilesLabel'
     ParentColor = False
@@ -38,9 +38,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 42
-    Width = 227
+    Height = 24
+    Top = 50
+    Width = 212
     BorderSpacing.Top = 6
     Caption = 'OpenLastProjectAtStartCheckBox'
     TabOrder = 0
@@ -51,9 +51,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Side = asrBottom
     Left = 2
-    Height = 18
-    Top = 60
-    Width = 207
+    Height = 24
+    Top = 74
+    Width = 188
     Caption = 'ShowCompileDialogCheckBox'
     OnChange = ShowCompileDialogCheckBoxChange
     TabOrder = 1
@@ -63,9 +63,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = AutoCloseCompileDialogCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 106
-    Width = 101
+    Height = 15
+    Top = 132
+    Width = 87
     BorderSpacing.Top = 10
     Caption = 'LazarusDirLabel'
     ParentColor = False
@@ -78,8 +78,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = LazarusDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 122
+    Height = 27
+    Top = 147
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
@@ -92,8 +92,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = LazarusDirButton
     Left = 2
-    Height = 21
-    Top = 122
+    Height = 27
+    Top = 147
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
@@ -106,8 +106,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = CompilerPathButton
     Left = 2
-    Height = 21
-    Top = 165
+    Height = 27
+    Top = 195
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
@@ -121,8 +121,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = CompilerPathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 165
+    Height = 27
+    Top = 195
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
@@ -134,9 +134,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = LazarusDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 149
-    Width = 118
+    Height = 15
+    Top = 180
+    Width = 103
     BorderSpacing.Top = 6
     Caption = 'CompilerPathLabel'
     ParentColor = False
@@ -147,8 +147,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FPCSourceDirButton
     Left = 2
-    Height = 21
-    Top = 208
+    Height = 27
+    Top = 243
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
@@ -162,8 +162,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = FPCSourceDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 208
+    Height = 27
+    Top = 243
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
@@ -175,9 +175,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = CompilerPathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 192
-    Width = 118
+    Height = 15
+    Top = 228
+    Width = 104
     BorderSpacing.Top = 6
     Caption = 'FPCSourceDirLabel'
     ParentColor = False
@@ -187,9 +187,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = FPCSourceDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 235
-    Width = 94
+    Height = 15
+    Top = 276
+    Width = 83
     BorderSpacing.Top = 6
     Caption = 'MakePathLabel'
     ParentColor = False
@@ -199,9 +199,9 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Control = MakePathComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 278
-    Width = 110
+    Height = 15
+    Top = 324
+    Width = 97
     BorderSpacing.Top = 6
     Caption = 'TestBuildDirLabel'
     ParentColor = False
@@ -212,8 +212,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = MakePathButton
     Left = 2
-    Height = 21
-    Top = 251
+    Height = 27
+    Top = 291
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
@@ -227,8 +227,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = MakePathComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 251
+    Height = 27
+    Top = 291
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
@@ -241,8 +241,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TestBuildDirButton
     Left = 2
-    Height = 21
-    Top = 294
+    Height = 27
+    Top = 339
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
@@ -256,8 +256,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideBottom.Control = TestBuildDirComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 294
+    Height = 27
+    Top = 339
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
@@ -270,54 +270,60 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Side = asrBottom
     Left = 32
-    Height = 18
-    Top = 78
-    Width = 238
+    Height = 24
+    Top = 98
+    Width = 215
     BorderSpacing.Left = 30
     Caption = 'AutoCloseCompileDialogCheckBox'
     TabOrder = 12
   end
-  object CompilerMessagesLabel: TLabel
+  object CompilerTranslationFileLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = TestBuildDirComboBox
     AnchorSideTop.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 321
-    Width = 152
+    Height = 15
+    Top = 372
+    Width = 158
     Alignment = taRightJustify
     BorderSpacing.Top = 6
-    Caption = 'CompilerMessagesLabel'
+    Caption = 'CompilerTranslationFileLabel'
     ParentColor = False
+    ParentShowHint = False
+    ShowHint = True
   end
-  object CompilerMessagesButton: TButton
-    AnchorSideTop.Control = CompilerMessagesComboBox
+  object CompilerTranslationFileButton: TButton
+    AnchorSideTop.Control = CompilerTranslationFileComboBox
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = CompilerMessagesComboBox
+    AnchorSideBottom.Control = CompilerTranslationFileComboBox
     AnchorSideBottom.Side = asrBottom
     Left = 542
-    Height = 21
-    Top = 337
+    Height = 27
+    Top = 387
     Width = 25
     Anchors = [akTop, akRight, akBottom]
     Caption = '...'
-    OnClick = CompilerMessagesButtonClick
+    OnClick = CompilerTranslationFileButtonClick
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 13
   end
-  object CompilerMessagesComboBox: TComboBox
+  object CompilerTranslationFileComboBox: TComboBox
     AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = CompilerMessagesLabel
+    AnchorSideTop.Control = CompilerTranslationFileLabel
     AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = CompilerMessagesButton
+    AnchorSideRight.Control = CompilerTranslationFileButton
     Left = 2
-    Height = 21
-    Top = 337
+    Height = 27
+    Top = 387
     Width = 540
     Anchors = [akTop, akLeft, akRight]
     ItemHeight = 0
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 14
-    Text = 'CompilerMessagesComboBox'
+    Text = 'CompilerTranslationFileComboBox'
   end
   object lblCenter: TLabel
     AnchorSideLeft.Control = Owner
@@ -335,8 +341,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideRight.Control = lblCenter
     AnchorSideRight.Side = asrBottom
     Left = 2
-    Height = 16
-    Top = 20
+    Height = 25
+    Top = 19
     Width = 278
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Right = 3
@@ -350,8 +356,8 @@ object FilesOptionsFrame: TFilesOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 289
-    Height = 16
-    Top = 20
+    Height = 25
+    Top = 19
     Width = 278
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 3
