--- a/ide/helpfpcmessages.lfm
+++ b/ide/helpfpcmessages.lfm
@@ -9,21 +9,21 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   Position = poScreenCenter
-  LCLVersion = '0.9.31'
+  LCLVersion = '1.3'
   object CurMsgGroupBox: TGroupBox
     Left = 6
     Height = 105
-    Top = 94
+    Top = 87
     Width = 637
     Align = alTop
     BorderSpacing.Around = 6
     Caption = 'CurMsgGroupBox'
-    ClientHeight = 89
+    ClientHeight = 88
     ClientWidth = 633
     TabOrder = 0
     object CurMsgMemo: TMemo
       Left = 0
-      Height = 89
+      Height = 88
       Top = 0
       Width = 633
       Align = alClient
@@ -37,8 +37,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
   end
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 42
-    Top = 474
+    Height = 36
+    Top = 480
     Width = 637
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
@@ -54,18 +54,18 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
   end
   object AllGroupBox: TGroupBox
     Left = 6
-    Height = 263
-    Top = 205
+    Height = 276
+    Top = 198
     Width = 277
     Align = alLeft
     BorderSpacing.Around = 6
     Caption = 'AllGroupBox'
-    ClientHeight = 247
+    ClientHeight = 259
     ClientWidth = 273
     TabOrder = 2
     object AllListBox: TListBox
       Left = 0
-      Height = 221
+      Height = 232
       Top = 0
       Width = 273
       Align = alClient
@@ -77,8 +77,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
     end
     object AddButton: TButton
       Left = 0
-      Height = 26
-      Top = 221
+      Height = 27
+      Top = 232
       Width = 273
       Align = alBottom
       AutoSize = True
@@ -89,13 +89,13 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
   end
   object CurGroupBox: TGroupBox
     Left = 300
-    Height = 263
-    Top = 205
+    Height = 276
+    Top = 198
     Width = 343
     Align = alClient
     BorderSpacing.Around = 6
     Caption = 'CurGroupBox'
-    ClientHeight = 247
+    ClientHeight = 259
     ClientWidth = 339
     TabOrder = 3
     object DeleteButton: TButton
@@ -103,10 +103,10 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = URLEdit
       AnchorSideTop.Side = asrBottom
-      Left = 104
-      Height = 26
-      Top = 192
-      Width = 84
+      Left = 108
+      Height = 27
+      Top = 196
+      Width = 89
       AutoSize = True
       BorderSpacing.Around = 6
       Caption = 'DeleteButton'
@@ -120,7 +120,7 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       Left = 6
       Height = 15
       Top = 11
-      Width = 64
+      Width = 61
       BorderSpacing.Around = 6
       Caption = 'NameLabel'
       ParentColor = False
@@ -131,10 +131,10 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideTop.Control = CurGroupBox
       AnchorSideRight.Control = CurGroupBox
       AnchorSideRight.Side = asrBottom
-      Left = 76
-      Height = 24
+      Left = 73
+      Height = 25
       Top = 6
-      Width = 257
+      Width = 260
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Around = 6
       OnChange = NameEditChange
@@ -149,7 +149,7 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Side = asrBottom
       Left = 6
       Height = 15
-      Top = 147
+      Top = 150
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -166,8 +166,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Control = CurGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 162
+      Height = 25
+      Top = 165
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -185,7 +185,7 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Side = asrBottom
       Left = 6
       Height = 15
-      Top = 36
+      Top = 37
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -202,8 +202,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Control = CurGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 51
+      Height = 25
+      Top = 52
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -221,7 +221,7 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Side = asrBottom
       Left = 6
       Height = 15
-      Top = 81
+      Top = 83
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -238,8 +238,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideRight.Control = CurGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 96
+      Height = 25
+      Top = 98
       Width = 327
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 6
@@ -255,8 +255,8 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 15
-      Top = 126
-      Width = 116
+      Top = 129
+      Width = 117
       BorderSpacing.Around = 6
       Caption = 'AdditionFitsMsgLabel'
       ParentColor = False
@@ -267,9 +267,9 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideTop.Control = URLEdit
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 26
-      Top = 192
-      Width = 92
+      Height = 27
+      Top = 196
+      Width = 96
       AutoSize = True
       BorderSpacing.Around = 6
       Caption = 'TestURLButton'
@@ -279,49 +279,33 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
   end
   object Splitter1: TSplitter
     Left = 289
-    Height = 263
-    Top = 205
+    Height = 276
+    Top = 198
     Width = 5
   end
   object GlobalOptionsGroupBox: TGroupBox
     Left = 6
-    Height = 82
+    Height = 75
     Top = 6
     Width = 637
     Align = alTop
     AutoSize = True
     BorderSpacing.Around = 6
     Caption = 'GlobalOptionsGroupBox'
-    ClientHeight = 66
+    ClientHeight = 58
     ClientWidth = 633
     TabOrder = 5
     object FPCMsgFileLabel: TLabel
       AnchorSideLeft.Control = GlobalOptionsGroupBox
-      AnchorSideTop.Control = FPCMsgFileEdit
+      AnchorSideTop.Control = FPCMsgFileValueLabel
       AnchorSideTop.Side = asrCenter
       Left = 6
       Height = 15
-      Top = 11
-      Width = 92
+      Top = 6
+      Width = 90
       BorderSpacing.Left = 6
       Caption = 'FPCMsgFileLabel'
       ParentColor = False
-    end
-    object FPCMsgFileEdit: TEdit
-      AnchorSideLeft.Control = FPCMsgFileLabel
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = GlobalOptionsGroupBox
-      AnchorSideRight.Control = GlobalOptionsGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 104
-      Height = 24
-      Top = 6
-      Width = 523
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      OnEditingDone = FPCMsgFileEditEditingDone
-      TabOrder = 0
-      Text = 'FPCMsgFileEdit'
     end
     object AdditionsFileLabel: TLabel
       AnchorSideLeft.Control = GlobalOptionsGroupBox
@@ -329,7 +313,7 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
       AnchorSideTop.Side = asrCenter
       Left = 6
       Height = 15
-      Top = 41
+      Top = 32
       Width = 100
       BorderSpacing.Around = 6
       Caption = 'AdditionsFileLabel'
@@ -338,18 +322,33 @@ object EditIDEMsgHelpDialog: TEditIDEMsgHelpDialog
     object AdditionsFileEdit: TEdit
       AnchorSideLeft.Control = AdditionsFileLabel
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = FPCMsgFileEdit
+      AnchorSideTop.Control = FPCMsgFileValueLabel
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = GlobalOptionsGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 112
-      Height = 24
-      Top = 36
+      Height = 25
+      Top = 27
       Width = 515
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Around = 6
-      TabOrder = 1
+      TabOrder = 0
       Text = 'AdditionsFileEdit'
+    end
+    object FPCMsgFileValueLabel: TLabel
+      AnchorSideLeft.Control = FPCMsgFileLabel
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = GlobalOptionsGroupBox
+      AnchorSideRight.Control = GlobalOptionsGroupBox
+      AnchorSideRight.Side = asrBottom
+      Left = 102
+      Height = 15
+      Top = 6
+      Width = 525
+      Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Around = 6
+      Caption = 'FPCMsgFileValueLabel'
+      ParentColor = False
     end
   end
 end
