--- a/ide/frames/msgwnd_options.lfm
+++ b/ide/frames/msgwnd_options.lfm
@@ -49,6 +49,7 @@ object MsgWndOptionsFrame: TMsgWndOptionsFrame
       Height = 29
       Top = 120
       Width = 303
+      Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbCustomColor, cbPrettyNames]
       Anchors = [akLeft, akRight, akBottom]
       BorderSpacing.Around = 6
       ItemHeight = 0
